# arkui_ui_appearance

./: BUILD.gn  CODEOWNERS  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  ui_appearance.gni
etc/para/: ui_appearance.para  ui_appearance.para.dac
interfaces/ets/ani/: BUILD.gn
interfaces/ets/ani/ets/: @ohos.uiAppearance.ets
interfaces/ets/ani/src/: ui_appearance.cpp  ui_appearance.h
interfaces/kits/napi/: BUILD.gn
interfaces/kits/napi/include/: js_ui_appearance.h
interfaces/kits/napi/src/: js_ui_appearance.cpp
interfaces/kits/native/: BUILD.gn
interfaces/kits/native/include/: ui_appearance.h  ui_appearance_types.h
interfaces/kits/native/src/: ui_appearance.cpp
sa_profile/: 7002.json  7002.xml  BUILD.gn
services/: BUILD.gn  IUiAppearanceAbility.idl
services/include/: alarm_timer.h  dark_mode_manager.h  timer_manager_controller.h  ui_appearance_ability.h  ui_appearance_ability_client.h  ui_appearance_ability_interface.h  ui_appearance_ability_proxy.h  ui_appearance_ability_stub.h  ui_appearance_ipc_interface_code.h  ui_appearance_log.h  ui_appearance_timer_manager.h  ui_appearance_types.h
services/src/: alarm_timer.cpp  dark_mode_manager.cpp  timer_manager_controller.cpp  ui_appearance_ability.cpp  ui_appearance_ability_client.cpp  ui_appearance_ability_proxy.cpp  ui_appearance_ability_stub.cpp  ui_appearance_timer_manager.cpp
services/utils/include/: alarm_timer_manager.h  setting_data_manager.h
services/utils/src/: alarm_timer_manager.cpp  parameter_wrap.cpp  setting_data_manager.cpp
test/mock/: mock_app_mgr_proxy.cpp  mock_parameter.cpp
test/mock/include/: accesstoken_kit.h
test/mock/src/: accesstoken_kit.cpp
test/unittest/: BUILD.gn  ui_appearance_test.cpp
test/unittest/dark_mode_manager_test/: BUILD.gn
test/unittest/setting_data_manager_test/: BUILD.gn
test/unittest/setting_data_observer_test/: BUILD.gn
test/unittest/smart_gesture_manager_test/: BUILD.gn
