# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")

ohos_unittest("ui_appearance_test") {
  module_out_path = "ui_appearance/ui_appearance_test"

  include_dirs = [
    "../mock/include",
  ]

  sources = [
    "ui_appearance_test.cpp",
    "../mock/src/accesstoken_kit.cpp",
    "../mock/src/mock_app_mgr_proxy.cpp",
    "../mock/src/mock_parameter.cpp",
  ]

  configs = []
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  deps = [
    "../../services:ui_appearance_service",
  ]

  external_deps = [
    "bundle_framework:appexecfwk_core",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
    "c_utils:utils",
    "ability_base:configuration",
    "ability_base:want",
    "ability_runtime:app_manager",
    "samgr:samgr_proxy",
    "safwk:system_ability_fwk",
    "ipc:ipc_core",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":ui_appearance_test" ]
}
