# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/arkui/ui_appearance/ui_appearance.gni")

group("ui_appearance_ani_package") {
  deps = [
    ":ui_appearance_ani",
    ":ui_appearance_etc"
  ]
}

#构建ANI库
ohos_shared_library("ui_appearance_ani") {
  deps = [ 
    "$ui_appearance_services_path:ui_appearance_client"
  ]
  
  include_dirs = [ "include/" ]
  sources = [ "./src/ui_appearance.cpp" ]
  external_deps = [
    "runtime_core:ani",
    "runtime_core:ani_helpers",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  part_name = "ui_appearance"
  subsystem_name = "arkui"
  output_extension = "so"
}

#构建abc
generate_static_abc("ui_appearance_abc") {
  base_url = "./ets"
  files = [ "./ets/@ohos.uiAppearance.ets" ]
  is_boot_abc = "True"
  device_dst_file = "system/framework/ui_appearance_abc.abc"
}

ohos_prebuilt_etc("ui_appearance_etc") {
  source = "$target_out_dir/ui_appearance_abc.abc"
  module_install_dir = "framework"
  part_name = "ui_appearance"
  subsystem_name = "arkui"
  deps = [ ":ui_appearance_abc" ]
}
